--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
