--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-slick": "^0.29.0"
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "18.8.5",
