--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "dotenv": "^16.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.8.5",
